one test down, 17 more to go